[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros"]}
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
